# freya

./: .editorconfig  .gitignore  .gitmodules  .taplo.toml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  INTERNALS.md  LICENSE.md  README.md  _typos.toml  bugs to solve  codecov.yml  examples.sh  flake.nix  justfile  opencode.json  readme.md  release-plz.toml  renovate.json  rust-toolchain-nightly.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml
common/: Cargo.toml
common/src/: event_loop.rs  event_messages.rs  geometry.rs  layout.rs  layout_memorizer.rs  layout_reference.rs  lib.rs  node_area.rs
components/: Cargo.toml
components/src/: accessibility_focus_bridge.rs  accessibility_focus_provider.rs  accordion.rs  button.rs  canvas.rs  cursor_area.rs  drag_drop.rs  dropdown.rs  external_link.rs  gesture_area.rs  graph.rs  input.rs  lib.rs  loader.rs  network_image.rs  router_link.rs  scroll_view.rs  slider.rs  switch.rs  theme.rs  theme_provider.rs  tooltip.rs  virtual_scroll_view.rs
components/src/scroll_views/: controlled_virtual_scroll_view.rs  mod.rs  scroll_bar.rs  scroll_thumb.rs  scroll_view.rs  virtual_scroll_view.rs
core/: Cargo.toml
core/src/: accessibility.rs  accessibility_state.rs  dom.rs  dom_events.rs  events.rs  events_processor.rs  freya_events.rs  layers.rs  layout.rs  lib.rs  node.rs  render.rs  viewports.rs
core/tests/: events.rs
crates/common/: CHANGELOG.md  Cargo.toml
crates/common/src/: accessibility.rs  compositor.rs  compositor_dirty_nodes.rs  event_messages.rs  images_cache.rs  layers.rs  layout.rs  lib.rs  multi_layer_renderer.rs  paragraphs.rs
crates/components/: CHANGELOG.md  Cargo.toml
crates/components-docs/: Cargo.toml  build.rs
crates/components-docs/src/: main.rs
crates/components/src/: accordion.rs  activable_route.rs  anchor.rs  animated_position.rs  animated_router.rs  app.rs  body.rs  button.rs  canvas.rs  checkbox.rs  chip.rs  cursor_area.rs  drag_drop.rs  draggable.rs  dropdown.rs  external_link.rs  gesture_area.rs  gif.rs  global_animated_position.rs  graph.rs  image.rs  input.rs  keyboard_navigator.rs  lib.rs  link.rs  loader.rs  menu.rs  native_container.rs  native_router.rs  network_image.rs  overflowed_content.rs  popup.rs  progress_bar.rs  radio.rs  remote_gif.rs  resizable_container.rs  segmented_button.rs  selectable_text.rs  sidebar.rs  slider.rs  (+14 more)
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: accessibility.rs  accessibility_state.rs  animation_clock.rs  compositor.rs  custom_attributes.rs  event_loop_messages.rs  event_messages.rs  events.rs  events_processor.rs  layers.rs  layout.rs  lib.rs  navigation_mode.rs  node.rs  node_state_snapshot.rs  parsing.rs  platform_state.rs  plugins.rs  render.rs  style.rs  types.rs  utils.rs  viewports.rs  window_config.rs
crates/core/tests/: click_event_overlay_with_solid_layer.rs  click_event_overlay_with_transparent_layer.rs  compatible_elements.rs  corner_radius.rs  event_bubbling.rs  events_emitting.rs  events_emitting_overlay.rs  filedrop_events.rs  images_cache.rs  mouseenter_event_overlay_with_transparent_layer.rs  nodes_reorder.rs  parse_align.rs  parse_blend_mode.rs  parse_border.rs  parse_color.rs  parse_corner_radius.rs  parse_decoration.rs  parse_display.rs  parse_focusable.rs  parse_gaps.rs  parse_gradient.rs  parse_highlight.rs  parse_layer.rs  parse_shadows.rs  parse_size.rs  parse_text_shadow.rs  platform_events.rs  pointer_events.rs  scroll_to_focused.rs  text_measuring.rs
crates/devtools/: CHANGELOG.md  Cargo.toml
crates/devtools-app/: Cargo.toml
crates/devtools-app/src/: main.rs  node.rs  property.rs  state.rs
crates/devtools/src/: incoming.rs  lib.rs  node.rs  node_info.rs  outgoing.rs  plugin.rs  property.rs  server.rs  state.rs  tab.rs
crates/dom/: Cargo.toml
crates/dom/src/: dom.rs  dom_adapter.rs  lib.rs  mutations_writer.rs
crates/elements/: CHANGELOG.md  Cargo.toml
crates/engine/: CHANGELOG.md  Cargo.toml
crates/engine/src/: lib.rs  (+2 more)
crates/freya-android/: Cargo.toml
crates/freya-animation/: Cargo.toml
devtools/: Cargo.toml
devtools/src/: lib.rs  node.rs  property.rs  tab.rs
dom/: Cargo.toml
dom/src/: dom.rs  dom_adapter.rs  lib.rs
elements/: Cargo.toml
elements/src/: elements.rs  events.rs  events_data.rs  lib.rs
engine/: Cargo.toml
engine/src/: color.rs  lib.rs  mocked.rs  skia.rs
freya/: Cargo.toml
freya/src/: devtools.rs  launch.rs  lib.rs
hooks/: Cargo.toml
hooks/src/: animation.rs  lib.rs  rope_editor.rs  shader_uniforms.rs  text_editor.rs  use_accessibility.rs  use_animation.rs  use_animation_transition.rs  use_camera.rs  use_canvas.rs  use_editable.rs  use_focus.rs  use_node.rs  use_scroll.rs  use_theme.rs
hooks/tests/: use_editable.rs
layers/: Cargo.toml
layers/src/: lib.rs
layout/: Cargo.toml
layout-engine/: Cargo.toml
layout-engine/src/: lib.rs
layout-engine/tests/: layouts.rs
layout/src/: area_calc.rs  layers.rs  lib.rs  old.rs  ops_calc.rs
layout/tests/: calc.rs  layouts.rs
processor/: Cargo.toml
processor/src/: events.rs  lib.rs
renderer/: Cargo.toml
renderer/src/: accessibility.rs  app.rs  config.rs  event_loop.rs  events_processor.rs  lib.rs  renderer.rs  window.rs  window_config.rs  wireframe.rs  work_loop.rs
state/: Cargo.toml
state/src/: accessibility.rs  cursor.rs  custom_attributes.rs  font_style.rs  layout.rs  lib.rs  node.rs  parsing.rs  references.rs  scroll.rs  size.rs  style.rs  transform.rs
state/tests/: parse_align.rs  parse_border.rs  parse_color.rs  parse_corner_radius.rs  parse_display.rs  parse_gap.rs  parse_gaps.rs  parse_gradient.rs  parse_paddings.rs  parse_shadows.rs  parse_size.rs  parse_text_shadow.rs
testing/: Cargo.toml
testing/src/: config.rs  launch.rs  lib.rs  test_handler.rs  test_node.rs
testing/tests/: test.rs
torin/: Cargo.toml  readme.md
torin/benches/: bench.rs
torin/src/: custom_measurer.rs  display.rs  dom_adapter.rs  gap.rs  geometry.rs  lib.rs  node.rs  node_resolver.rs  padding.rs  radius.rs  scaled.rs  size.rs  torin.rs
torin/tests/: test.rs
trev/: Cargo.toml
trev/src/: lib.rs
(+1668 files in other folders)
