[package]
name = "examples"
edition = "2024"
publish = false

[features]
hotpath = ["freya-core/hotpath", "ragnarok/hotpath", "freya-winit/hotpath"]
hotpath-alloc = [
  "freya-core/hotpath-alloc",
  "ragnarok/hotpath-alloc",
  "freya-winit/hotpath-alloc",
]
hotpath-off = [
  "freya-core/hotpath-off",
  "ragnarok/hotpath-off",
  "freya-winit/hotpath-off",
]
devtools = ["freya/devtools"]
performance = ["freya/performance"]
plot = ["freya/plot"]
vulkan = ["freya-winit/vulkan"]

[workspace]
members = [
  "./crates/freya",
  "./crates/freya-core",
  "./crates/torin",
  "./crates/ragnarok",
  "./crates/freya-clipboard",
  "./crates/freya-edit",
  "./crates/freya-winit",
  "./crates/freya-components",
  "./crates/pathgraph",
  "./crates/freya-animation",
  "./crates/freya-router",
  "./crates/freya-router-macro",
  "./crates/freya-testing",
  "./crates/freya-i18n",
  "./crates/freya-performance-plugin",
  "./crates/freya-radio",
  "./crates/freya-engine",
  "./crates/freya-devtools",
  "./crates/freya-devtools-app",
  "./crates/freya-icons",
  "./crates/freya-sdk",
  "./examples/website",
]

[workspace.dependencies]
freya = { path = "./crates/freya", features = [
  "all",
], version = "0.4.0-alpha.4" }
freya-core = { path = "./crates/freya-core", version = "0.4.0-alpha.4" }
torin = { path = "./crates/torin", version = "0.4.0-alpha.4" }
ragnarok = { path = "./crates/ragnarok", version = "0.4.0-alpha.4" }
freya-clipboard = { path = "./crates/freya-clipboard", version = "0.4.0-alpha.4" }
freya-edit = { path = "./crates/freya-edit", version = "0.4.0-alpha.4" }
freya-winit = { path = "./crates/freya-winit", version = "0.4.0-alpha.4" }
freya-components = { path = "./crates/freya-components", version = "0.4.0-alpha.4" }
pathgraph = { path = "./crates/pathgraph/", version = "0.4.0-alpha.4" }
freya-animation = { path = "./crates/freya-animation", version = "0.4.0-alpha.4" }
freya-router = { path = "./crates/freya-router", version = "0.4.0-alpha.4" }
freya-router-macro = { path = "./crates/freya-router-macro", version = "0.4.0-alpha.4" }
freya-testing = { path = "./crates/freya-testing", version = "0.4.0-alpha.4" }
freya-i18n = { path = "./crates/freya-i18n", version = "0.4.0-alpha.4" }
freya-performance-plugin = { path = "./crates/freya-performance-plugin", version = "0.4.0-alpha.4" }
freya-radio = { path = "./crates/freya-radio", version = "0.4.0-alpha.4" }
freya-engine = { path = "./crates/freya-engine", version = "0.4.0-alpha.4" }
freya-devtools = { path = "./crates/freya-devtools", features = [
  "server",
], version = "0.4.0-alpha.4" }
freya-icons = { path = "./crates/freya-icons", features = [
  "all",
], version = "0.4.0-alpha.4" }
freya-sdk = { path = "./crates/freya-sdk", features = [
  "all",
], version = "0.4.0-alpha.4" }

# core
generational-box = "0.6.2"
tracing = "0.1.41"
rustc-hash = "2.1.1"
bitflags = "2.9.3"
# Core/async
futures-util = "0.3.31"
futures-channel = "0.3.31"
futures-lite = "2.6.1"
async-io = "2.5.0"

# Animations
easer = "0.3.0"
async-broadcast = "0.7.2"

# Text editing
ropey = "1.6.1"
keyboard-types = "0.7.0"

# Layout
euclid = "0.22.9"

# Layers, Ragnarok, etc
itertools = "0.14.0"

# Rendering
skia-safe = { version = "0.90.0", features = ["gl", "textlayout", "svg"] }
bytes = "1.10.1"

# Desktop renderer
raw-window-handle = "0.6.0"
winit = "0.30.0"

# Tray
tray-icon = "0.21"

# OpenGL
gl = "0.14.0"
glutin = "0.32.0"
glutin-winit = "0.5.0"

# Vulkan
ash = "^0.38"
ash-window = "0.13.0"

# accessibility
accesskit = "0.21.0"
accesskit_winit = "0.29.0"

# Performance
hotpath = "0.8"

# Errors
anyhow = "1.0.100"
thiserror = "2.0.17"

# Images
image = "0.25.8"

# SDK
tokio = { version = "1.0", default-features = false }

# Rendering
[target."cfg(target_os = \"linux\")".dependencies.skia-safe]
version = "0.90.0"
features = ["gl", "textlayout", "svg", "x11", "wayland"]


[dev-dependencies]
freya = { workspace = true }
freya-core = { workspace = true, features = ["debug-integrity", "test"] }
torin = { workspace = true }
ragnarok = { workspace = true }
freya-edit = { workspace = true }
freya-router = { workspace = true }
freya-winit = { workspace = true }
freya-testing = { workspace = true }
freya-i18n = { workspace = true }
freya-performance-plugin = { workspace = true }
freya-radio = { workspace = true }
freya-icons = { workspace = true }
freya-sdk = { workspace = true }

skia-safe = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = "0.3.19"

rand = "0.9"

async-io = { workspace = true }
futures-lite = { workspace = true }
futures-channel = { workspace = true }

ropey = { workspace = true }
bitflags = { workspace = true }
keyboard-types = { workspace = true }

hotpath = { workspace = true }

itertools = { workspace = true }

# SDK examples
tokio = { workspace = true }

# File picker example
rfd = "0.16.0"

[profile.release]
lto = true
opt-level = 3

# Optimizes the freya devtools server
[profile.dev.package.freya-devtools]
opt-level = 3
