[package]
name = "freya-components"
description = "Cross-platform GUI Library."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[dependencies]
dioxus = { workspace = true }
dioxus-router = { workspace = true }

freya-elements = { workspace = true }
freya-node-state = { workspace = true }
freya-hooks = { workspace = true }
freya-common = { workspace = true }

tokio = { workspace = true }

open = "1"
reqwest = { version = "0.11.13", features = ["json"] }

[dev-dependencies]
freya = { path = "../freya", version = "0.1.0" }
freya-testing = { path = "../testing", version = "0.1.0" }