[package]
name = "freya-components"
description = "Components library desgined for Freya."
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://freyaui.dev/"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "desktop", "skia", "dioxus"]
categories = ["gui", "asynchronous"]

[dependencies]
freya-elements = { workspace = true }
freya-node-state = { workspace = true }
freya-hooks = { workspace = true }
freya-common = { workspace = true }
freya-core = { path = "../core", version = "0.1" }
freya-engine = { path = "../engine", version = "0.1" }
torin = { workspace = true }

dioxus = { workspace = true }
dioxus-router = { workspace = true }

winit = { workspace = true }
tokio = { workspace = true }

open = "1"
reqwest = { version = "0.11.13", features = ["json"] }

[dev-dependencies]
freya = { path = "../freya" }
freya-testing = { path = "../testing" }