[package]
name = "freya-core"
description = "Cross-platform GUI Library."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[features]
devtools = []

[target."cfg(target_os = \"linux\")".dependencies.skia-safe]
version = "0.60.0"
features = ["gl", "textlayout", "svg", "x11", "wayland"]

[dependencies]
winit = { workspace = true }
skia-safe = { workspace = true }

dioxus-rsx = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-hooks = { workspace = true }
dioxus-core = { workspace = true }

freya-layout = { workspace = true }
freya-node-state = { workspace = true }
freya-elements = { workspace = true }
freya-common = { workspace = true }
freya-dom = { workspace = true }

tokio = { workspace = true }

rustc-hash = "1.1.0"
tracing = "0.1"
