[package]
name = "freya-core"
description = "Internal core funcionatilies for Freya."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://freyaui.dev/"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "desktop", "skia", "dioxus"]
categories = ["gui", "asynchronous"]

[features]
devtools = []

[target."cfg(target_os = \"linux\")".dependencies.skia-safe]
workspace = true
features = ["gl", "textlayout", "svg", "x11", "wayland"]

[dependencies]
freya-layout = { workspace = true }
freya-node-state = { workspace = true }
freya-elements = { workspace = true }
freya-common = { workspace = true }
freya-dom = { workspace = true }
torin = { workspace = true }

dioxus-rsx = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-hooks = { workspace = true }
dioxus-core = { workspace = true }

tokio = { workspace = true }
winit = { workspace = true }
skia-safe = { workspace = true }
accesskit = { workspace = true }
zbus = { workspace = true }

rustc-hash= { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
dioxus = { workspace = true }
freya = { workspace = true }
freya-testing = { workspace = true }
