[package]
name = "freya-devtools"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[dependencies]
freya-node-state = { workspace = true }
freya-layout = { workspace = true }
freya-renderer = { workspace = true }
freya-elements = { workspace = true }
freya-hooks = { workspace = true }
freya-core = { workspace = true }
freya-components = { workspace = true }
freya-dom = { workspace = true, features = ["shared"] }

dioxus = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-core = { workspace = true }
dioxus-router = { workspace = true }

tokio = { workspace = true }
skia-safe = { workspace = true }
