[package]
name = "freya-dom"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[dependencies]
freya-node-state = { workspace = true }
freya-common = { workspace = true }
torin = { workspace = true }

dioxus-rsx = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-hooks = { workspace = true }
dioxus-core = { workspace = true }

skia-safe = { workspace = true }

uuid = { version =  "1.2.2", features = ["v4"]}
rustc-hash = { workspace = true }
