[package]
name = "freya-elements"
description = "Cross-platform GUI Library."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[dependencies]
bumpalo = "3.11.1"
dioxus-rsx = { git = "https://github.com/Demonthos/dioxus", branch="simplify-native-core"}
dioxus-native-core = { git = "https://github.com/Demonthos/dioxus", branch="simplify-native-core"}
dioxus-core-macro = { git = "https://github.com/Demonthos/dioxus", branch="simplify-native-core"}
dioxus-hooks = { git = "https://github.com/Demonthos/dioxus", branch="simplify-native-core"}
dioxus-core = { git = "https://github.com/Demonthos/dioxus", branch="simplify-native-core"}
glutin = { version = "0.29.0"}
euclid = "0.22.7"
tokio = { version = "1.23.0" }
freya-common = { path = "../common"}
keyboard-types = "0.6.2"