[package]
name = "freya"
description = "Cross-platform GUI Library."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[features]
devtools = ["dep:freya-devtools", "freya-dom/shared"]
use_camera = ["freya-hooks/use_camera"]

[target."cfg(target_os = \"linux\")".dependencies.skia-safe]
version = "0.60.0"
features = ["gl", "textlayout", "svg", "x11", "wayland"]

[dependencies]
freya-devtools = { path = "../devtools", version = "0.1.0", optional = true }
freya-node-state = { path = "../state", version = "0.1.0" }
freya-layout = { path = "../layout", version = "0.1.0" }
freya-renderer = { path = "../renderer", version = "0.1.0" }
freya-elements = { path = "../elements", version = "0.1.0" }
freya-common = { path = "../common", version = "0.1.0" }
freya-hooks = { path = "../hooks"}
freya-core = { path = "../core"}
freya-components ={ path = "../components"}
freya-dom = { path = "../dom", version = "0.1.0" }
dioxus = { git = "https://github.com/Demonthos/dioxus", branch="fix-event-bubling", features = ["macro", "hooks", "hot-reload"]}
dioxus-rsx = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-hooks = { workspace = true }
dioxus-core = { workspace = true }
dioxus-router = { workspace = true }
dioxus-hot-reload = { workspace = true }

tokio = { version = "1.23.0", features = ["sync", "rt-multi-thread", "time", "macros"] }
anymap = "0.12.1"
fxhash = "0.2.1"
skia-safe = { workspace = true }
tracing = "0.1"
futures = "0.3.25"
