[package]
name = "freya"
description = "Cross-platform GUI Library."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[features]
devtools = ["dep:freya-devtools"]
use_camera = ["freya-hooks/use_camera"]

[target."cfg(target_os = \"linux\")".dependencies.skia-safe]
workspace = true
features = ["gl", "textlayout", "svg", "x11", "wayland"]

[dependencies]
freya-devtools = { workspace = true, optional = true }
freya-node-state = { workspace = true }
freya-layout = { workspace = true }
freya-renderer = { workspace = true }
freya-elements = { workspace = true }
freya-common = { workspace = true }
freya-hooks = { workspace = true }
freya-core = { workspace = true }
freya-components = { workspace = true }
freya-dom = { workspace = true }
torin = { workspace = true }

dioxus = { workspace = true }
dioxus-rsx = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-hooks = { workspace = true }
dioxus-core = { workspace = true }
dioxus-router = { workspace = true }
dioxus-hot-reload = { workspace = true }

skia-safe = { workspace = true }
tokio = { workspace = true }

anymap = { workspace = true }
fxhash = { workspace = true }
tracing = { workspace = true }

