[package]
name = "freya-hooks"
description = "Cross-platform GUI Library."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[features]
use_camera = ["dep:nokhwa"]

[dependencies]
dioxus-rsx = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-hooks = { workspace = true }
dioxus-core = { workspace = true }
tween = "2.0.0"
tokio = { version = "1.23.0" }
freya-elements = { path = "../elements", version = "0.1.0" }
uuid = { version =  "1.2.2", features = ["v4"]}
ropey = "1.6.0"
freya-node-state = { path = "../state", version = "0.1.0" }
freya-common = { path = "../common", version = "0.1.0" }
nokhwa = {version = "0.10.3", features = ["input-native"], optional = true }
bytes = "1.3.0"
winit = "0.28.2"
euclid = "0.22.7"

[dev-dependencies]
dioxus = { git = "https://github.com/Demonthos/dioxus", branch="fix-event-bubling", features = ["macro", "hooks", "hot-reload"]}
freya = { path = "../freya"}
freya-testing = { path = "../testing"}
